examples/bad/reference-to-non-variable.elina
fn f(ref argument: string): void {
}

fn main(): void {
  return f("Hello, world!");
}